fixed image gap

--- a/public/css/vendor.css
+++ b/public/css/vendor.css
@@ -6679,6 +6679,7 @@ a.close.disabled {
   position: relative;
   width: 100%;
   overflow: hidden;
+  margin-top: -90px;
 }
 
 .carousel-inner::after {
